# taeyeon-media-player

./: .gitignore  Doxyfile  LICENSE  README.md  SECURITY.md  launcher_gui.py  listening_stats.py  media_library.py  media_player.py  media_player_config.example.json  metadata_browser.py  metadata_editor_models.py  metadata_tag_tools.py  pyproject.toml  taeyeon_media_player.py  taeyeon_media_player_config.example.json
.github/workflows/: ci.yml
assets/: app-bootstrap.js  app.js  audio-visualizer.js  edit-domain.js  index.html  lyrics.js  music-domain.js  playlist-domain.js  stats-domain.js  styles.css  theme-controller.js  theme-engine.js  video-domain.js
assets/styles/: game.css  responsive.css
docs/: ARCHITECTURE.md  DESIGN.md  QA.md  USAGE.md
game/: README.md  game.js  index.html  styles.css
src/media_player_app/: __init__.py  api_routes.py  edit_routes.py  http_helpers.py  launcher_gui.py  listening_stats.py  media_library.py  media_models.py  media_player.py  metadata_browser.py  metadata_tag_tools.py  server.py  server_config.py  streaming.py
tests/: test_frontend_bundle.py  test_http_ranges.py  test_library_refresh.py  test_lyrics.py  test_media_dir.py  test_metadata_payload.py  test_playlists.py  test_stats_ranges.py
